# ai-app-scaffold

./: .gitignore  LICENSE  NOTICE  README.md  VERSION  fix-duplicate-license.js  test-accessible.ps1  test-ps1.ps1  test-status.ps1  test_auth.py
.trae/documents/: scaffold-core-prd-fullstack-planning-v1.0.0-20251202-zh-cn.md  v1.0.0 一键发布与启动方案.md
.trae/rules/: name_rules.md  project_rules.md
backend-node/: .env.example  .node.port  .npmrc  Dockerfile  README.md  eslint.config.cjs  jest.config.cjs  package-lock.json  package.json
backend-node/scripts/: fix-license-header.js  (+3 more)
backend-python/: Dockerfile  README.md  pyproject.toml
backend-python/app/: main.py  security.py
backend-python/app/routes/: accounts.py  auth.py
backend-python/scripts/: server-manager.ps1  server-manager.sh
backend-python/tests/: test_health.py
docs-framework/: CHANGELOG.md  README.md  SDD_WORKFLOW.md
documents/: scaffold-core-prd-fullstack-planning-v1.0.0-20251202-zh-cn.md  script_validation_report.md  全栈可复用脚手架规划（前端 React+Vite、后端 Node_Express 与 Python_FastAPI、文档系统）.md  同步参考主题与模式并完善样板主页.md
frontend/: .env.example  .frontend.port  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
integration/: docker-compose.yml
scripts/: install.ps1  install.sh  package-release-win.js  package-release-win.ps1  package-release-win.sh  package-release.sh  pretty.ps1  pretty.sh  release.ps1  release.sh  sdd  sdd.ps1  service.ps1  service.sh  verify-release.sh
(+53 files in other folders)
